--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,11 @@ SQLAlchemy==1.1.10
 Werkzeug==0.12.2
 WTForms==2.1
 MySQL-python==1.2.5
+
+Flask_Cors==3.0.2
+flask_restplus==0.9.2
+nose==l.3.7
+setuptools
+gunicorn==19.7.1
+zeep==2.1.1
+requests
